--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "githubworkshop",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.php",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
